# viatui

./: .gitignore  Dockerfile  README.md  chromeRemoteInterface.js  entrypoint.sh  package-lock.json  package.json  pyproject.toml
docs/: screen_shot_guide.md  virtual_screen_and_screenshot_guide.md
modules/: get_from_viatuix_config.py  move_cursor.py  screenshot_grid.py
scripts/: conflict.py  conflict_resolved.py  container_screenshot.py  load_extension.py  load_turbosrc.py  login.py  login_confirm.py  move_cursor.py  pyautogui_screenshot_container.py  screenshot.py  use_page.py  vote_merge_pull_request_5.py  vote_merge_pull_request_6_out_of_conflict.py
